--- a/main/app.json
+++ b/main/app.json
@@ -1,21 +1,4 @@
 {
-  "fish": {
-    "name"   : "fish",
-    "package": "com.intel.smart_mug.fish-for-health",
-    "version": "0.0.1",
-    "icon"   : "icon.bmp",
-    "iconJSON": "media.json",
-    "start"  : "app.js",
-    "description": "a digital pet for monitoring user water drinking behavior"
-  },
-  "drink": {
-    "name"   : "drink",
-    "package": "com.intel.smart_mug.drink",
-    "version": "0.0.1",
-    "icon"   : "icon.jpg",
-    "start"  : "app.js",
-    "description": "drink monitor"
-  },
   "weChat": {
     "name": "weChat",
     "package": "com.intel.smart_mug.weChat",
@@ -25,11 +8,46 @@
     "start": "app.js",
     "description": "desc"
   },
+  "freeDraw": {
+    "name": "freeDraw",
+    "package": "com.intel.smart_mug.freeDraw",
+    "version": "0.0.1",
+    "icon": "icon.jpg",
+    "iconJSON": "media.json",
+    "start": "app.js",
+    "description": "desc"
+  },
   "weather": {
     "name": "weather",
     "package": "com.intel.smart_mug.weather",
     "version": "0.0.1",
     "icon": "icon16x12.jpg",
+    "iconJSON": "media.json",
+    "start": "app.js"
+  },
+  "fish": {
+    "name"   : "fish",
+    "package": "com.intel.smart_mug.fish-for-health",
+    "version": "0.0.1",
+    "icon"   : "icon.bmp",
+    "iconJSON": "media.json",
+    "start"  : "app.js",
+    "description": "a digital pet for monitoring user water drinking behavior"
+  },
+  "email": {
+    "name": "email",
+    "package": "com.intel.smart_mug.email",
+    "version": "0.0.1",
+    "icon": "icon16x12.jpg",
+    "iconJSON": "media.json",
+    "start": "index.js",
+    "description": "desc"
+  },
+  "mole": {
+    "name": "mole",
+    "package": "com.intel.smart_mug.whac-a-mole",
+    "version": "0.0.1",
+    "icon"   : "icon.bmp",
     "iconJSON": "media.json",
     "start": "app.js"
   },
@@ -51,12 +69,20 @@
     "start": "app.js",
     "description": "desc"
   },
-  "mole": {
-    "name": "mole",
-    "package": "com.intel.smart_mug.whac-a-mole",
+  "drink": {
+    "name"   : "drink",
+    "package": "com.intel.smart_mug.drink",
     "version": "0.0.1",
     "icon"   : "icon.bmp",
-    "iconJSON": "media.json",
-    "start": "app.js"
+    "start"  : "app.js",
+    "description": "drink monitor"
+  },
+  "dice" : {
+    "name"   : "dice",
+    "package": "com.intel.smart_mug.dice",
+    "version": "0.0.1",
+    "icon"   : "icon.bmp",
+    "start"  : "app.js",
+    "description": "shake to run a dice"
   }
 }
